--- a/docs/notebooks/T1/7Recursif-Nathanael.ipynb
+++ b/docs/notebooks/T1/7Recursif-Nathanael.ipynb
@@ -695,45 +695,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def decTob_recursive(n, b):\n",
     "    assert (b > 1 and b < 17) , \"b doit être compris entre 2 et 16\"\n",
     "    signes = [\"0\",\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\",\"A\",\"B\",\"C\",\"D\",\"E\",\"F\"]\n",
-    "    mot = \"\"\n",
+    "    mot = \"\"    \n",
     "    if n == 0:\n",
     "        return mot\n",
     "    else:\n",
-    "        mot = signes[n % b] + decTob_recursive(n//b, b) + mot"
+    "        mot = decTob_recursive(n//b, b) + signes[n % b] + mot\n",
+    "        return mot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1001101\n",
       "1001101\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"NoneType\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [50], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mprint\u001b[39m(decTob(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(decTob_recursive(\u001b[39m77\u001b[39m, \u001b[39m2\u001b[39m))\n",
-      "Cell \u001b[0;32mIn [49], line 8\u001b[0m, in \u001b[0;36mdecTob_recursive\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_recursive(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b) \u001b[39m+\u001b[39m mot\n",
-      "Cell \u001b[0;32mIn [49], line 8\u001b[0m, in \u001b[0;36mdecTob_recursive\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39m b] \u001b[39m+\u001b[39m decTob_recursive(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b) \u001b[39m+\u001b[39m mot\n",
-      "    \u001b[0;31m[... skipping similar frames: decTob_recursive at line 8 (3 times)]\u001b[0m\n",
-      "Cell \u001b[0;32mIn [49], line 8\u001b[0m, in \u001b[0;36mdecTob_recursive\u001b[0;34m(n, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m mot\n\u001b[1;32m      7\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 8\u001b[0m     mot \u001b[39m=\u001b[39m signes[n \u001b[39m%\u001b[39;49m b] \u001b[39m+\u001b[39;49m decTob_recursive(n\u001b[39m/\u001b[39;49m\u001b[39m/\u001b[39;49mb, b) \u001b[39m+\u001b[39m mot\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
      ]
     }
    ],
@@ -744,22 +731,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115\n",
+      "115\n"
+     ]
+    }
+   ],
    "source": [
-    "decTob(77, 8)\n",
-    "decTob_iterative(77, 2)"
+    "print(decTob(77, 8))\n",
+    "print(decTob_recursive(77, 8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4D\n",
+      "4D\n"
+     ]
+    }
+   ],
    "source": [
-    "decTob(77, 16)\n",
-    "decTob_iterative(77, 2)"
+    "print(decTob(77, 16))\n",
+    "print(decTob_recursive(77, 16))"
    ]
   },
   {
