--- a/docs/notebooks/T1/7Recursif-Nathanael.ipynb
+++ b/docs/notebooks/T1/7Recursif-Nathanael.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,32 +796,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def factoriel_recursive(n):\n",
-    "    "
+    "    fact = 1\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*factoriel_recursive(n-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "120\n"
+     ]
     }
    ],
    "source": [
-    "factoriel(5)"
+    "print(factoriel(5))\n",
+    "print(factoriel_recursive(5))"
    ]
   },
   {
