--- a/docs/notebooks/T1/7Recursif-Nathanael.ipynb
+++ b/docs/notebooks/T1/7Recursif-Nathanael.ipynb
@@ -840,6 +840,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Programme 1 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Hanoi(n, dep, inter, arr):\n",
+    "    if n == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        Hanoi(n-1, dep, arr, inter)\n",
+    "        print(f\"déplacement d'un disque de {dep} vers {arr}\")\n",
+    "        Hanoi(n-1, inter, dep, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "déplacement d'un disque de Tige 1 vers Tige 3\n",
+      "déplacement d'un disque de Tige 1 vers Tige 2\n",
+      "déplacement d'un disque de Tige 3 vers Tige 2\n",
+      "déplacement d'un disque de Tige 1 vers Tige 3\n",
+      "déplacement d'un disque de Tige 2 vers Tige 1\n",
+      "déplacement d'un disque de Tige 2 vers Tige 3\n",
+      "déplacement d'un disque de Tige 1 vers Tige 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hanoi(3, \"Tige 1\", \"Tige 2\", \"Tige 3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Programme 2 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def affichage(tours) :\n",
+    "    d = len(tours[’départ’])\n",
+    "    i = len(tours[’intermédiaire’])\n",
+    "    a = len(tours[’arrivée’])\n",
+    "    hauteur = max(d, i, a)\n",
+    "    for h in range(hauteur, 0, -1) :\n",
+    "if d >= h : print( tours[’départ’][h-1], end=’ ’)\n",
+    "else : print(’ ’, end=’ ’)\n",
+    "if i >= h : print( tours[’intermédiaire’][h-1], end=’ ’)\n",
+    "else : print(’ ’, end=’ ’)\n",
+    "if a >= h : print( tours[’arrivée’][h-1])\n",
+    "else : print(’ ’)\n",
+    "print(’\\u2AE0 \\u2AE0 \\u2AE0’)\n",
+    "print(’---------------------------------------------------------------’)\n",
+    "def Hanoi(n,dep=’départ’,inter=’intermédiaire’,arr=’arrivée’):\n",
+    "\"\"\" spécification à faire \"\"\"\n",
+    "if n==0:\n",
+    "# à compléter\n",
+    "else:\n",
+    "# à compléter\n",
+    "# à compléter\n",
+    "anneau_deplace = tours[dep].pop()\n",
+    "tours[arr].append(anneau_deplace)\n",
+    "affichage(tours)\n",
+    "# à compléter\n",
+    "n=4\n",
+    "tours = dict()\n",
+    "tours[’départ’] = [ j for j in range(n,0,-1) ]\n",
+    "tours[’intermédiaire’] = []\n",
+    "tours[’arrivée’] = []\n",
+    "Hanoi(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "****\n",
     "## Références aux programmes :\n",
     "\n",
