--- a/docs/notebooks/T1/eval/ds2-Partie_Pratique_A-Nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2-Partie_Pratique_A-Nathanael.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,18 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sommet(pile):\n",
-    "    \n",
+    "def sommet(self):\n",
     "    ''' Renvoie la valeur au sommet de la pile mais sans la supprimer de la pile '''\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "    assert not self.est_vide(), \"La pile est vide\"\n",
+    "    return self.liste[-1]"
    ]
   },
   {
@@ -152,24 +148,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "La pile est vide",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m p \u001b[39m=\u001b[39m Pile()\n\u001b[0;32m----> 2\u001b[0m sommet(p)\n",
+      "Cell \u001b[0;32mIn [19], line 3\u001b[0m, in \u001b[0;36msommet\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msommet\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m      2\u001b[0m     \u001b[39m''' Renvoie la valeur au sommet de la pile mais sans la supprimer de la pile '''\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mest_vide(), \u001b[39m\"\u001b[39m\u001b[39mLa pile est vide\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mliste[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "\u001b[0;31mAssertionError\u001b[0m: La pile est vide"
+     ]
+    }
+   ],
+   "source": [
+    "p = Pile()\n",
+    "sommet(p)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.empiler(4)\n",
+    "p.empiler(2)\n",
+    "sommet(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mettre_disques(pile, n):\n",
+    "def mettre_disques(self, n):\n",
     "    '''met des disques de taille n à 1 sur la pile'''\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    "
+    "    for i in range(n, 0, -1):\n",
+    "        self.empiler(n)\n",
+    "        n -= 1\n",
+    "    return self.liste"
    ]
   },
   {
@@ -228,24 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Pile()\n",
+    "mettre_disques(p, 5)\n",
+    "print(p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,11 +297,11 @@
     "    ''' renvoie une liste de 3 piles,\n",
     "    la première correspond à la pile des n disques,\n",
     "    les autres étant vides.'''\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n"
+    "    p0 = Pile()\n",
+    "    p1 = Pile()\n",
+    "    p2 = Pile()\n",
+    "    mettre_disques(p0, n)\n",
+    "    return [p0, p1, p2]"
    ]
   },
   {
@@ -301,17 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 4, 3, 2, 1], [], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tours = creation_tours(5)\n",
+    "print(tours)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
