--- a/docs/notebooks/T1/eval/ds2-Partie_Pratique_A-Nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2-Partie_Pratique_A-Nathanael.ipynb
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Première implémentation pour les piles\n",
+    "# Première implémentation pour les piles :\n",
+    "\n",
     "def creer_pile():\n",
     "    '''Renvoie une pile vide'''\n",
     "    return []\n",
@@ -64,7 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deuxième implémentation pour les piles\n",
+    "# Deuxième implémentation pour les piles :\n",
+    "\n",
     "class Pile:\n",
     "\n",
     "    '''classe Pile création d’une instance Pile avec une liste'''\n",
@@ -108,10 +110,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Liste Python :\n",
+    "\n",
+    "def sommet_liste(pile):\n",
+    "    ''' Renvoie la valeur au sommet de la pile mais sans la supprimer de la pile '''\n",
+    "    assert not est_vide(pile), \"La pile est vide\"\n",
+    "    return pile[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Classe Pile :\n",
+    "\n",
     "def sommet(self):\n",
     "    ''' Renvoie la valeur au sommet de la pile mais sans la supprimer de la pile '''\n",
     "    assert not self.est_vide(), \"La pile est vide\"\n",
@@ -144,6 +162,51 @@
     ">>> sommet(p)\n",
     "2\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "La pile est vide",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [34], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m p \u001b[39m=\u001b[39m creer_pile()\n\u001b[0;32m----> 2\u001b[0m sommet_liste(p)\n",
+      "Cell \u001b[0;32mIn [32], line 5\u001b[0m, in \u001b[0;36msommet_liste\u001b[0;34m(pile)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msommet_liste\u001b[39m(pile):\n\u001b[1;32m      4\u001b[0m     \u001b[39m''' Renvoie la valeur au sommet de la pile mais sans la supprimer de la pile '''\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide(pile), \u001b[39m\"\u001b[39m\u001b[39mLa pile est vide\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m pile[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "\u001b[0;31mAssertionError\u001b[0m: La pile est vide"
+     ]
+    }
+   ],
+   "source": [
+    "p = creer_pile()\n",
+    "sommet_liste(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empiler(p, 4)\n",
+    "empiler(p, 2)\n",
+    "sommet_liste(p)"
    ]
   },
   {
@@ -212,10 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Liste python :\n",
+    "\n",
+    "def mettre_disques_liste(pile, n):\n",
+    "    '''met des disques de taille n à 1 sur la pile'''\n",
+    "    for i in range(n, 0, -1):\n",
+    "        empiler(pile, n)\n",
+    "        n -= 1\n",
+    "    return pile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classe pile :\n",
+    "\n",
     "def mettre_disques(self, n):\n",
     "    '''met des disques de taille n à 1 sur la pile'''\n",
     "    for i in range(n, 0, -1):\n",
@@ -244,6 +325,25 @@
     ">>> print(p)\n",
     "[5, 4, 3, 2, 1]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = creer_pile()\n",
+    "mettre_disques_liste(p, 5)\n",
+    "print(p)"
    ]
   },
   {
@@ -289,10 +389,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Liste Python :\n",
+    "\n",
+    "def creation_tours_liste(n):\n",
+    "    ''' renvoie une liste de 3 piles,\n",
+    "    la première correspond à la pile des n disques,\n",
+    "    les autres étant vides.'''\n",
+    "    p0 = creer_pile()\n",
+    "    p1 = creer_pile()\n",
+    "    p2 = creer_pile()\n",
+    "    mettre_disques_liste(p0, n)\n",
+    "    return [p0, p1, p2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Classe Pile :\n",
+    "\n",
     "def creation_tours(n):\n",
     "    ''' renvoie une liste de 3 piles,\n",
     "    la première correspond à la pile des n disques,\n",
@@ -315,6 +436,24 @@
     ">>> print(tours)\n",
     "[[5, 4, 3, 2, 1], [], []]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 4, 3, 2, 1], [], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tours = creation_tours_liste(5)\n",
+    "print(tours)"
    ]
   },
   {
