--- a/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
@@ -37,11 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1481949882.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [3], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    from ds2-debreilly-nathanael import *\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "from ds2-nom-prenom import *"
+    "from ds2-debreilly-nathanael import *"
    ]
   },
   {
@@ -226,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
