--- a/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
@@ -37,28 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1481949882.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [3], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    from ds2-debreilly-nathanael import *\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "from ds2-debreilly-nathanael import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ds2_debreilly_nathanael import *"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +66,8 @@
     "    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\n",
     "    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\n",
     "    '''\n",
-    "    \n",
-    "    "
+    "    if sommet(origine) < sommet(cible) and not est_vide(origine):\n",
+    "        cible.empiler(origine.depiler())"
    ]
   },
   {
@@ -106,10 +90,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'est_vide'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m tours \u001b[39m=\u001b[39m creation_tours(\u001b[39m5\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m deplacer(tours, \u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m deplacer(tours, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(tours)\n",
+      "Cell \u001b[0;32mIn [10], line 6\u001b[0m, in \u001b[0;36mdeplacer\u001b[0;34m(tours, origine, cible)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdeplacer\u001b[39m(tours, origine, cible):\n\u001b[1;32m      2\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m     \u001b[39mif\u001b[39;00m sommet(origine) \u001b[39m<\u001b[39m sommet(cible) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide(origine):\n\u001b[1;32m      7\u001b[0m         cible\u001b[39m.\u001b[39mempiler(origine\u001b[39m.\u001b[39mdepiler())\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:30\u001b[0m, in \u001b[0;36msommet\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msommet\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     29\u001b[0m     \u001b[39m''' Renvoie la valeur au sommet de la pile mais sans la supprimer de la pile '''\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mest_vide(), \u001b[39m\"\u001b[39m\u001b[39mLa pile est vide\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     31\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mliste[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'est_vide'"
+     ]
+    }
+   ],
+   "source": [
+    "tours = creation_tours(5)\n",
+    "deplacer(tours, 0, 1)\n",
+    "deplacer(tours, 0, 2)\n",
+    "print(tours)"
+   ]
   },
   {
    "cell_type": "code",
