--- a/docs/notebooks/T1/7Recursif-Nathanael.ipynb
+++ b/docs/notebooks/T1/7Recursif-Nathanael.ipynb
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -899,30 +899,37 @@
     "    a = len(tours[’arrivée’])\n",
     "    hauteur = max(d, i, a)\n",
     "    for h in range(hauteur, 0, -1) :\n",
-    "if d >= h : print( tours[’départ’][h-1], end=’ ’)\n",
-    "else : print(’ ’, end=’ ’)\n",
-    "if i >= h : print( tours[’intermédiaire’][h-1], end=’ ’)\n",
-    "else : print(’ ’, end=’ ’)\n",
-    "if a >= h : print( tours[’arrivée’][h-1])\n",
-    "else : print(’ ’)\n",
+    "        if d >= h :\n",
+    "            print( tours[’départ’][h-1], end=’ ’)\n",
+    "    else : \n",
+    "        print(’ ’, end=’ ’)\n",
+    "    if i >= h : \n",
+    "        print( tours[’intermédiaire’][h-1], end=’ ’)\n",
+    "    else : \n",
+    "        print(’ ’, end=’ ’)\n",
+    "    if a >= h : \n",
+    "        print( tours[’arrivée’][h-1])\n",
+    "    else : \n",
+    "        print(’ ’)\n",
     "print(’\\u2AE0 \\u2AE0 \\u2AE0’)\n",
     "print(’---------------------------------------------------------------’)\n",
+    "\n",
     "def Hanoi(n,dep=’départ’,inter=’intermédiaire’,arr=’arrivée’):\n",
-    "\"\"\" spécification à faire \"\"\"\n",
-    "if n==0:\n",
-    "# à compléter\n",
-    "else:\n",
-    "# à compléter\n",
-    "# à compléter\n",
-    "anneau_deplace = tours[dep].pop()\n",
-    "tours[arr].append(anneau_deplace)\n",
-    "affichage(tours)\n",
-    "# à compléter\n",
-    "n=4\n",
-    "tours = dict()\n",
-    "tours[’départ’] = [ j for j in range(n,0,-1) ]\n",
-    "tours[’intermédiaire’] = []\n",
-    "tours[’arrivée’] = []\n",
+    "    \"\"\" spécification à faire \"\"\"\n",
+    "    if n==0:\n",
+    "    # à compléter\n",
+    "    else:\n",
+    "    # à compléter\n",
+    "    # à compléter\n",
+    "    anneau_deplace = tours[dep].pop()\n",
+    "    tours[arr].append(anneau_deplace)\n",
+    "    affichage(tours)\n",
+    "    # à compléter\n",
+    "    n=4\n",
+    "    tours = dict()\n",
+    "    tours[’départ’] = [ j for j in range(n,0,-1) ]\n",
+    "    tours[’intermédiaire’] = []\n",
+    "    tours[’arrivée’] = []\n",
     "Hanoi(n)"
    ]
   },
@@ -997,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
