--- a/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -141,35 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Hanoi(n, dep, inter, arr):\n",
-    "    if n == 0:\n",
-    "        return None\n",
-    "    else:\n",
-    "        Hanoi(n-1, dep, arr, inter)\n",
-    "        print(f\"déplacement d'un disque de {dep} vers {arr}\")\n",
-    "        Hanoi(n-1, inter, dep, arr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def resoudre(tours, n, origine, cible, interm):\n",
-    "    if n == 1:\n",
-    "        return resoudre(tours, n-1, tours[interm], tours[cible], tours[origine])\n",
+    "    if n == 0:\n",
+    "        return None\n",
     "    else:\n",
-    "        resoudre(tours, n-1, tours[origine], tours[interm], tours[cible])\n",
-    "        resoudre(tours, n-1, tours[interm], tours[cible], tours[origine])\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "        resoudre(tours, n-1, origine, interm, cible)\n",
+    "        deplacer(tours, origine, cible)\n",
+    "        resoudre(tours, n-1, interm, cible, origine)"
    ]
   },
   {
@@ -189,26 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not Pile",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [44], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m tours \u001b[39m=\u001b[39m creation_tours(\u001b[39m5\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m resoudre(tours, \u001b[39m5\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [43], line 5\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mreturn\u001b[39;00m resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, tours[interm], tours[cible], tours[origine])\n\u001b[1;32m      4\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 5\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, tours[origine], tours[interm], tours[cible])\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, tours[interm], tours[cible], tours[origine])\n",
-      "Cell \u001b[0;32mIn [43], line 5\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mreturn\u001b[39;00m resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, tours[interm], tours[cible], tours[origine])\n\u001b[1;32m      4\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 5\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, tours[origine], tours[interm], tours[cible])\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, tours[interm], tours[cible], tours[origine])\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not Pile"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], [], [5, 4, 3, 2, 1]]\n"
      ]
     }
    ],
    "source": [
     "tours = creation_tours(5)\n",
-    "resoudre(tours, 5, 0, 2, 1)"
+    "resoudre(tours, 5, 0, 2, 1)\n",
+    "print(tours)"
    ]
   },
   {
