--- a/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2B-debreilly-nathanael.ipynb
@@ -57,19 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deplacer(tours, origine, cible):\n",
+    "def deplacer(self, origine, cible):\n",
     "    '''\n",
     "    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\n",
     "    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\n",
     "    '''\n",
-    "    if tours[cible].est_vide() and not tours[origine].est_vide():\n",
-    "        tours[cible].empiler(tours[origine].depiler())\n",
-    "    elif sommet(tours[origine]) < sommet(tours[cible]) and not tours[origine].est_vide():\n",
-    "        tours[cible].empiler(tours[origine].depiler())"
+    "    if self[cible].est_vide() and not self[origine].est_vide():\n",
+    "        self[cible].empiler(self[origine].depiler())\n",
+    "    elif sommet(self[origine]) < sommet(self[cible]) and not self[origine].est_vide():\n",
+    "        self[cible].empiler(self[origine].depiler())"
    ]
   },
   {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -141,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def resoudre(tours, n, origine, cible, interm):\n",
+    "def resoudre(self, n, origine, cible, interm):\n",
     "    if n == 0:\n",
     "        return None\n",
     "    else:\n",
-    "        resoudre(tours, n-1, origine, interm, cible)\n",
-    "        deplacer(tours, origine, cible)\n",
-    "        resoudre(tours, n-1, interm, cible, origine)"
+    "        resoudre(self, n-1, origine, interm, cible)\n",
+    "        deplacer(self, origine, cible)\n",
+    "        resoudre(self, n-1, interm, cible, origine)"
    ]
   },
   {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -203,16 +203,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nb_etapes(n):\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "    return 2**n - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1023"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_etapes(10)"
    ]
   },
   {
@@ -240,13 +256,6 @@
     "\n",
     "De même, essayez de choisir des variables dont le nom est compréhensible, si c’est pertinent."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
