--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -41,15 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ds2_nom_prenom import *"
+    "from ds2_debreilly_nathanael import *"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -85,16 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pile_vers_tableau(pile, n):\n",
-    "    '''\n",
-    "    \n",
-    "    '''\n",
-    "    \n",
-    "    "
+    "def pile_vers_tableau(self, n):\n",
+    "    tableau = [0]*n\n",
+    "    for i in range(len(self.liste)):\n",
+    "        tableau[i] = self.liste[i]\n",
+    "    return tableau"
    ]
   },
   {
@@ -124,6 +116,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 1, 0, 0]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pile = Pile()\n",
+    "pile.empiler(4)\n",
+    "pile.empiler(3)\n",
+    "pile.empiler(1)\n",
+    "pile_vers_tableau(pile, 5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,15 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tours_vers_matrice(tours, n) :\n",
-    "       \n",
-    "    \n",
-    "    \n",
-    "    "
+    "def tours_vers_matrice(self, n) :\n",
+    "       matrice = []\n",
+    "       for i in self.liste:\n",
+    "              pile = Pile()\n",
+    "              for j in i:\n",
+    "                     pile.empiler(j)\n",
+    "              matrice.append(pile_vers_tableau(pile, n))\n",
+    "       return matrice"
    ]
   },
   {
@@ -156,6 +175,30 @@
     ">>> tours_vers_matrice(tours, 5)\n",
     "[[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tours = Pile()\n",
+    "tours.empiler([5, 4, 3])\n",
+    "tours.empiler([1])\n",
+    "tours.empiler([2])\n",
+    "tours_vers_matrice(tours, 5)"
    ]
   },
   {
@@ -175,25 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def affichage_matrice(matrice, n) :\n",
-    "\n",
+    "    ligne = \"\"\n",
     "    for j in range(n-1, -1, -1): # parcours de droite à gauche des sous-tableaux\n",
-    "        ...\n",
     "        for i in range(3): # parcours de haut en bas des tableaux\n",
-    "            ...\n",
-    "            quelque chose avec matrice[i][j]\n",
-    "            ...\n",
-    "        ...\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "            if matrice[i][j] == 0:\n",
+    "                ligne += \"| \"\n",
+    "            else:\n",
+    "                ligne += str(matrice[i][j]) + \" \"\n",
+    "        print(ligne)\n",
+    "        ligne = \"\""
    ]
   },
   {
@@ -211,6 +249,28 @@
     " 4 | |\n",
     " 5 1 2\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| | | \n",
+      "| | | \n",
+      "3 | | \n",
+      "4 | | \n",
+      "5 1 2 \n"
+     ]
+    }
+   ],
+   "source": [
+    "matrice = [[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]\n",
+    "affichage_matrice(matrice, 5)"
    ]
   },
   {
@@ -414,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
