--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -218,12 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "def affichage_matrice(matrice, n) :\n",
-    "    ligne = \"\"\n",
+    "    ligne = \" \"\n",
     "    for j in range(n-1, -1, -1): # parcours de droite à gauche des sous-tableaux\n",
     "        for i in range(3): # parcours de haut en bas des tableaux\n",
     "            if matrice[i][j] == 0:\n",
@@ -231,7 +231,7 @@
     "            else:\n",
     "                ligne += str(matrice[i][j]) + \" \"\n",
     "        print(ligne)\n",
-    "        ligne = \"\""
+    "        ligne = \" \""
    ]
   },
   {
@@ -286,12 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "def affichage_tours(tours, n) :\n",
-    "    "
+    "    affichage_matrice(tours_vers_matrice(tours, n), n)\n",
+    "    ligne = \"\"\n",
+    "    for i in range(len(tours.liste)*2+1):\n",
+    "        ligne += \"=\"\n",
+    "    print(ligne)"
    ]
   },
   {
@@ -302,7 +306,7 @@
     "\n",
     "``` \n",
     ">>> tours = [[5, 4, 3], [1], [2]]\n",
-    ">>> afichage_tours(tours, n)\n",
+    ">>> affichage_tours(tours, 5)\n",
     " | | |\n",
     " | | |\n",
     " 3 | |\n",
@@ -310,6 +314,32 @@
     " 5 1 2\n",
     "=======\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | | | \n",
+      " | | | \n",
+      " 3 | | \n",
+      " 4 | | \n",
+      " 5 1 2 \n",
+      "=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "tours = Pile()\n",
+    "tours.empiler([5, 4, 3])\n",
+    "tours.empiler([1])\n",
+    "tours.empiler([2])\n",
+    "affichage_tours(tours, 5)"
    ]
   },
   {
@@ -329,11 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def resoudre(tours, n_disques, n, origine, cible, interm):\n"
+    "def resoudre(tours, n_disques, n, origine, cible, interm):\n",
+    "    if n == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        resoudre(tours, n-1, origine, interm, cible)\n",
+    "        deplacer(tours, origine, cible)\n",
+    "        resoudre(tours, n-1, interm, cible, origine)"
    ]
   },
   {
@@ -354,6 +390,28 @@
     " | | 2\n",
     "=======\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "resoudre() missing 1 required positional argument: 'interm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [85], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [84], line 5\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 5\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, origine, interm, cible)\n\u001b[1;32m      6\u001b[0m     deplacer(tours, origine, cible)\n\u001b[1;32m      7\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, interm, cible, origine)\n",
+      "\u001b[0;31mTypeError\u001b[0m: resoudre() missing 1 required positional argument: 'interm'"
+     ]
+    }
+   ],
+   "source": [
+    "resoudre(creation_tours(2), 2, 2, 0, 2, 1)"
    ]
   },
   {
