--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pile_vers_tableau(self, n):\n",
+    "def pile_vers_tableau(pile, n):\n",
     "    tableau = [0]*n\n",
-    "    for i in range(len(self.liste)):\n",
-    "        tableau[i] = self.liste[i]\n",
+    "    for i in range(len(pile)):\n",
+    "        tableau[i] = pile[i]\n",
     "    return tableau"
    ]
   },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -126,16 +126,16 @@
        "[4, 3, 1, 0, 0]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pile = Pile()\n",
-    "pile.empiler(4)\n",
-    "pile.empiler(3)\n",
-    "pile.empiler(1)\n",
+    "pile = creer_pile_liste()\n",
+    "empiler_liste(pile, 4)\n",
+    "empiler_liste(pile, 3)\n",
+    "empiler_liste(pile, 1)\n",
     "pile_vers_tableau(pile, 5)"
    ]
   },
@@ -150,17 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tours_vers_matrice(self, n) :\n",
+    "def tours_vers_matrice(tours, n) :\n",
     "       matrice = []\n",
-    "       for i in self.liste:\n",
-    "              pile = Pile()\n",
-    "              for j in i:\n",
-    "                     pile.empiler(j)\n",
-    "              matrice.append(pile_vers_tableau(pile, n))\n",
+    "       for i in tours:\n",
+    "              matrice.append(pile_vers_tableau(i, n))\n",
     "       return matrice"
    ]
   },
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -188,16 +185,13 @@
        "[[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tours = Pile()\n",
-    "tours.empiler([5, 4, 3])\n",
-    "tours.empiler([1])\n",
-    "tours.empiler([2])\n",
+    "tours = [[5, 4, 3], [1], [2]]\n",
     "tours_vers_matrice(tours, 5)"
    ]
   },
@@ -218,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,18 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| | | \n",
-      "| | | \n",
-      "3 | | \n",
-      "4 | | \n",
-      "5 1 2 \n"
+      " | | | \n",
+      " | | | \n",
+      " 3 | | \n",
+      " 4 | | \n",
+      " 5 1 2 \n"
      ]
     }
    ],
@@ -286,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -329,16 +323,24 @@
       " | | | \n",
       " 3 | | \n",
       " 4 | | \n",
-      " 5 1 2 \n",
-      "=======\n"
+      " 5 1 2 \n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'liste'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [110], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m tours \u001b[39m=\u001b[39m [[\u001b[39m5\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m3\u001b[39m], [\u001b[39m1\u001b[39m], [\u001b[39m2\u001b[39m]]\n\u001b[0;32m----> 2\u001b[0m affichage_tours(tours, \u001b[39m5\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [108], line 4\u001b[0m, in \u001b[0;36maffichage_tours\u001b[0;34m(tours, n)\u001b[0m\n\u001b[1;32m      2\u001b[0m affichage_matrice(tours_vers_matrice(tours, n), n)\n\u001b[1;32m      3\u001b[0m ligne \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(tours\u001b[39m.\u001b[39;49mliste)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m      5\u001b[0m     ligne \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(ligne)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'liste'"
      ]
     }
    ],
    "source": [
-    "tours = Pile()\n",
-    "tours.empiler([5, 4, 3])\n",
-    "tours.empiler([1])\n",
-    "tours.empiler([2])\n",
+    "tours = [[5, 4, 3], [1], [2]]\n",
     "affichage_tours(tours, 5)"
    ]
   },
@@ -359,17 +361,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "def resoudre(tours, n_disques, n, origine, cible, interm):\n",
-    "    if n == 0:\n",
+    "    affichage_tours(tours, n)\n",
+    "    if n_disques == 0:\n",
     "        return None\n",
     "    else:\n",
-    "        resoudre(tours, n-1, origine, interm, cible)\n",
+    "        resoudre(tours, n_disques-1, n, origine, interm, cible)\n",
     "        deplacer(tours, origine, cible)\n",
-    "        resoudre(tours, n-1, interm, cible, origine)"
+    "        affichage_tours(tours, n)\n",
+    "        resoudre(tours, n_disques-1, n, interm, cible, origine)"
    ]
   },
   {
@@ -394,24 +398,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "resoudre() missing 1 required positional argument: 'interm'",
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [85], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [84], line 5\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 5\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, origine, interm, cible)\n\u001b[1;32m      6\u001b[0m     deplacer(tours, origine, cible)\n\u001b[1;32m      7\u001b[0m     resoudre(tours, n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, interm, cible, origine)\n",
-      "\u001b[0;31mTypeError\u001b[0m: resoudre() missing 1 required positional argument: 'interm'"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [95], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m pile \u001b[39m=\u001b[39m Pile()\n\u001b[1;32m      2\u001b[0m pile\u001b[39m.\u001b[39mempiler(creation_tours(\u001b[39m2\u001b[39m))\n\u001b[0;32m----> 3\u001b[0m resoudre(pile, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [93], line 2\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mresoudre\u001b[39m(tours, n_disques, n, origine, cible, interm):\n\u001b[0;32m----> 2\u001b[0m     affichage_tours(tours, n)\n\u001b[1;32m      3\u001b[0m     \u001b[39mif\u001b[39;00m n_disques \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      4\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn [77], line 2\u001b[0m, in \u001b[0;36maffichage_tours\u001b[0;34m(tours, n)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39maffichage_tours\u001b[39m(tours, n) :\n\u001b[0;32m----> 2\u001b[0m     affichage_matrice(tours_vers_matrice(tours, n), n)\n\u001b[1;32m      3\u001b[0m     ligne \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(tours\u001b[39m.\u001b[39mliste)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n",
+      "Cell \u001b[0;32mIn [47], line 7\u001b[0m, in \u001b[0;36mtours_vers_matrice\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m      5\u001b[0m        \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m i:\n\u001b[1;32m      6\u001b[0m               pile\u001b[39m.\u001b[39mempiler(j)\n\u001b[0;32m----> 7\u001b[0m        matrice\u001b[39m.\u001b[39mappend(pile_vers_tableau(pile, n))\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m matrice\n",
+      "Cell \u001b[0;32mIn [17], line 4\u001b[0m, in \u001b[0;36mpile_vers_tableau\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m      2\u001b[0m tableau \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m]\u001b[39m*\u001b[39mn\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mliste)):\n\u001b[0;32m----> 4\u001b[0m     tableau[i] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mliste[i]\n\u001b[1;32m      5\u001b[0m \u001b[39mreturn\u001b[39;00m tableau\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
      ]
     }
    ],
    "source": [
-    "resoudre(creation_tours(2), 2, 2, 0, 2, 1)"
+    "pile = Pile()\n",
+    "pile.empiler(creation_tours(2))\n",
+    "resoudre(pile, 2, 2, 0, 2, 1)"
    ]
   },
   {
